log
Thu 16 May 2024 12:07:38 AM UTC: 
 tests:  0|5
total_score: 0/70
0103027
Thu 16 May 2024 12:22:40 AM UTC: 
 sudoku.c | 40 +++++++++++++++++++++++++++-------------
 1 file changed, 27 insertions(+), 13 deletions(-)
 tests:  0|5
total_score: 0/70
8136508
Thu 16 May 2024 12:31:37 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
0df5777
Thu 16 May 2024 12:34:46 AM UTC: 
 sudoku.c | 16 ----------------
 1 file changed, 16 deletions(-)
 tests:  0|5
total_score: 0/70
8ce6037
Thu 16 May 2024 12:38:58 AM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
5c3b8c3
Thu 16 May 2024 12:42:35 AM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:94:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   94 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
1e35ff3
